Center the Header vertically

--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -29,7 +29,7 @@
   text-align: -webkit-match-parent;
   text-align: match-parent;
   text-transform: uppercase;
-  padding: 0 1em 0 0;
+  padding-left: 1em;
   font-size: 14px;
 }
 
