Racetrack scaffolding. [Finishes #132393285]

--- a/src/components/Collapsible/collapsible.scss
+++ b/src/components/Collapsible/collapsible.scss
@@ -1,8 +1,9 @@
 .collapsible {
+  flex-direction: column;
 }
 
 .collapsible-header {
-}
+ }
 
 .collapsible-caret-open {
   border-left: 4px solid transparent;
