--- a/src/components/Lightbox/lightbar.scss
+++ b/src/components/Lightbox/lightbar.scss
@@ -3,6 +3,7 @@
   background-color: #000000;
   justify-content: space-between;
   display: flex;
+  width: 100%;
 
   .lightbar-attr {
     display: flex;
