--- a/src/components/auth/auth.scss
+++ b/src/components/auth/auth.scss
@@ -1,47 +1,27 @@
-.error {
-  color: red;
-}
+@import '../../styles/core.scss';
 
 .auth {
   background-color: #ededed;
-  display: flex;
-  flex-direction: column;
-  flex: 1;
   height: 100vh;
+  width: 100vw;
 }
 
 .auth-box {
   background-color: #fff;
-  margin: 32px auto;
   padding: 50px;
   width: 400px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: space-between;
   border-radius: 3px;
   box-shadow: 0px 24px 20px -20px #BBB;
 }
 
-.auth:before,
-.auth:after {
-  content:"";
-  position:absolute;
-  z-index:-2;
-}
-
 .auth-input {
   width: 100%;
-  margin: 16px 0 0px 0;
   background: transparent;
   border: none;
   border-bottom: 1px solid #b3b3b3;
-  color: #4d4948;
-}
-
-// Remove box highling when focused
-.auth-input:focus {
-  outline: none;
+  color: $zorroa-greyish-brown;
+  font-size: 14px;
 }
 
 .auth-label {
@@ -49,19 +29,23 @@
   font-size: 12px;
   font-weight: 300;
   margin: 0;
+  text-transform: uppercase;
+}
+
+.auth-password {
+  letter-spacing: 4px;
 }
 
 .auth-logo {
-  display: flex;
-  justify-content: center;
 }
 
 .auth-forgot {
   display: inline-block;
-  font-family: Roboto, sans-serif;
+  font-family: Roboto-Light, sans-serif;
   font-size: 14px;
   margin-top: 16px;
-  color: #4d4948;
+  color: $zorroa-greyish-brown;
+  text-decoration: none;
 }
 
 .auth-button-primary {
@@ -70,17 +54,14 @@
   margin-top: 24px;
   padding: 7pt 24px 7pt 24px;
   color: #fff;
-  background-color: #73b61c;
+  background-color: $zorroa-sickly-green;
   border-radius: 3px;
   border: 1px solid transparent;
+  cursor: pointer;
 }
 
 .auth-form {
   width: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-between;
 }
 
 .auth-field {
@@ -91,6 +72,21 @@
 .auth-message {
   font-family: Roboto, sans-serif;
   font-size: 14px;
-  color: #4d4948;
+  color: $zorroa-greyish-brown;
   margin-top:60;
+}
+
+.auth-validation-error {
+  font-size: 14px;
+  color: $zorroa-faded-red;
+}
+
+.auth-error {
+  font-size: 14px;
+  color: $zorroa-faded-red;
+  height: 3.5em;
+  margin: 1em 0;
+}
+
+.auth-error-msg {
 }
