--- a/src/components/Table/table.scss
+++ b/src/components/Table/table.scss
@@ -9,6 +9,8 @@ tr:nth-child(even) {
 }
 
 .assets-table-scroll {
+  border-top: 1px solid #ddd;
+  border-bottom: 1px solid #ddd;
   overflow:auto;
-  height: 100%;
+  max-height: 300px;
 }
