Update references to core.scss - using core-mixins & core-globals
Use core-mixins.scss from our React components
Load core-globals.scss from src/index.js.

This makes sure our global styles & custom fonts are available to
every component in the app

--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -1,4 +1,4 @@
-@import '../../styles/core.scss';
+@import '../../styles/core-mixins.scss';
 
 // Header does not grow, and contains a row-layout flexbox
 // with the logo and searchbar scrunched on the left and
