--- a/src/components/auth/auth.scss
+++ b/src/components/auth/auth.scss
@@ -1,7 +1,7 @@
 @import '../../styles/core-mixins.scss';
 
 .auth {
-  background-color: #ededed;
+  background-color: $zorroa-nearwhite;
   height: 100vh;
   width: 100vw;
 }
