--- a/src/components/Workspace/workspace.scss
+++ b/src/components/Workspace/workspace.scss
@@ -1,3 +1,5 @@
+@import '../../styles/core-mixins.scss';
+
 // App class, containing header and workspace in columns
 .app {
   display: flex;
@@ -13,14 +15,14 @@
   display: flex;
   flex-direction: column;
   padding: 8px;
-  background-color: #ededed;
+  background-color: $zorroa-nearwhite;
 }
 
 // Allow the workspace to fill the full height of App
 .workspace {
   display:flex;
   flex:1;
-  background-color: #ededed;
+  background-color: $zorroa-nearwhite;
 }
 
 // Asset and table, in a column
@@ -35,7 +37,7 @@
 .sidebar {
   flex: 0 0 50px;
   padding: 8px;
-  background-color: #ededed;
+  background-color: $zorroa-nearwhite;
   border-left: 1px solid #c3c3c3;
   border-right: 1px solid #c3c3c3;
 
