--- a/src/components/Assets/assets.scss
+++ b/src/components/Assets/assets.scss
@@ -10,25 +10,25 @@
   flex: 1 0 0;
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  // justify-content: space-between;
   align-items: center;
   overflow: hidden;
 
   // Just making sure these work...
   &.masonry {
-    background-color: lavender;
+    // background-color: lavender;
   }
 
   &.waterfall {
-    background-color: lemonchiffon;
+    // background-color: lemonchiffon;
   }
 
   &.grid {
-    background-color: linen;
+    // background-color: linen;
   }
 
   &.slideshow {
-    background-color: beige;
+    // background-color: beige;
   }
 }
 
