--- a/src/components/Collapsible/collapsible.scss
+++ b/src/components/Collapsible/collapsible.scss
@@ -6,17 +6,19 @@
   min-width: 16px;
   max-width: 16px;
   margin-right: 1em;
+  display: none;
 }
 
 
 .collapsible {
 
-  &.parent .collapsible-caret {
-    font-size: 20px;
+  &.parent > .collapsible-header > .collapsible-caret {
+    font-size: 18px;
+    display: block;
   }
 
-  &.open .collapsible-caret {
-    transform: rotate(90deg);
+  &.open  > .collapsible-header > .collapsible-caret {
+    transform: rotate(180deg);
   }
 }
 
@@ -25,4 +27,9 @@
   height: 40px;
   padding: 5px;
   background-color: $zorroa-lightgray;
+  margin-bottom: 5px;
+
+  .collapsible-header-icon {
+    margin-right: 1em;
+  }
 }
