--- a/src/components/Inspector/inspector.scss
+++ b/src/components/Inspector/inspector.scss
@@ -5,10 +5,13 @@
   justify-content: center;
   align-items: center;
 
-  img {
+  .inspector-content {
     width: 100%;
     height: 100%;
     max-width:100%;
     max-height:100%;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;
   }
 }
