--- a/src/components/Lightbox/lightbox.scss
+++ b/src/components/Lightbox/lightbox.scss
@@ -4,7 +4,11 @@
   background-color: $zorroa-greyish-brown; // $grayish-brown
   display: flex;
   flex-direction: column;
+  position:fixed;
+  left:0;
+  top:0;
   height: 100vh;
+  width: 100vw;
 }
 
 .lightbox-body {
