Work on workspace & assets layout + limit assets to 480px
When the assets get too large, it breaks the layout, this change
is moving toward locking the layout so assets can't break the layout,
but we're not quite there yet.

--- a/src/components/Assets/assets.scss
+++ b/src/components/Assets/assets.scss
@@ -1,18 +1,23 @@
 @import '../../styles/core-mixins.scss';
 
+.assets-container {
+  overflow: hidden;
+  max-width: 100%;
+}
+
 .assets-scroll {
-  // overflow: hidden;
+  overflow-y: scroll;
+  overflow-x: hidden;
   padding-left: 8px;
   padding-right: 8px;
+  max-width: 100%;
 }
 
 .assets-layout {
   flex: 1 0 0;
   display: flex;
   flex-wrap: wrap;
-  // justify-content: space-between;
   align-items: center;
-  overflow: hidden;
 
   // Just making sure these work...
   &.masonry {
