--- a/src/components/Workspace/workspace.scss
+++ b/src/components/Workspace/workspace.scss
@@ -6,7 +6,13 @@
   flex-direction: column;
   overflow: hidden;
   flex: 1;
+
+  // This is a full screen (viewport) app
   height: 100vh;
+  width: 100vw;
+  position: fixed;
+  top: 0;
+  left: 0;
 }
 
 // Asset region, between the sidebars, filling the width
@@ -20,15 +26,11 @@
 
 // Allow the workspace to fill the full height of App
 .workspace {
-  display:flex;
-  flex:1;
   background-color: $zorroa-nearwhite;
 }
 
 // Asset and table, in a column
 .workspace-body {
-  @include flexOn;
-  @include flexCol;
 }
 
 
