--- a/src/components/Modal/modal.scss
+++ b/src/components/Modal/modal.scss
@@ -23,13 +23,11 @@
 
     &.modal-appear {
       opacity: 0.01;
-      transform: translate3d(0px, -200px, 0px);
     }
 
     &.modal-appear.modal-appear-active {
-      opacity: 9;
-      transform: translate3d(0px, 0px, 0px);
-      transition: all 500ms cubic-bezier(0.175, 0.885, 0.320, 1.275);
+      opacity: 1;
+      transition: all 500ms linear;
     }
 
     &.modal-leave {
@@ -38,9 +36,7 @@
 
     &.modal-leave.modal-leave-active {
       opacity: 0.01;
-      transition: all 300ms cubic-bezier(0.175, 0.885, 0.320, 1.275);
-      transform: translate3d(0px, -200px, 0px);
-
+      transition: all 300ms linear;
     }
   }
 
@@ -65,7 +61,7 @@
     border-radius: 0 0 $BORDER_RADIUS $BORDER_RADIUS;
     border-top: $DIVIDE_BORDER;
     color: $HF_COLOR;
-    height: 20px;
+    min-height: 20px;
     padding: 15px;
     text-align: center;
   }
