Move styling I shouldn't have put in Collapsible over to FolderItem
Add isParent, isOpen bools to the collapsible header callback so child components can render themselves appropriately
Add a rot180 global class for flipping things

--- a/src/styles/core-globals.scss
+++ b/src/styles/core-globals.scss
@@ -45,6 +45,8 @@ input,input:focus,button,button:focus,.form-control,.form-control:focus {
 
 .animate { @include animate; }
 
+.rot180 { transform: rotate(180deg); }
+
 /*
 Make our color defs available as classes
 */
