Add grid & masonry layout functions
Add functions to compute layout, in a separate file
Change thumbs to accept absolute position props from parent (assets panel)
Simplify thumb props (remove layout & use dim for positioning)

--- a/src/components/Assets/assets.scss
+++ b/src/components/Assets/assets.scss
@@ -8,16 +8,15 @@
 .assets-scroll {
   overflow-y: scroll;
   overflow-x: hidden;
-  padding-left: 8px;
-  padding-right: 8px;
+  padding: 8px;
   max-width: 100%;
 }
 
 .assets-layout {
-  flex: 1 0 0;
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
+  // flex: 1 0 0;
+  // display: flex;
+  // flex-wrap: wrap;
+  // align-items: center;
 
   // Just making sure these work...
   &.masonry {
