--- a/src/components/Thumb/Thumb.scss
+++ b/src/components/Thumb/Thumb.scss
@@ -3,5 +3,7 @@
 .assets-thumb {
   background-repeat: no-repeat;
   background-position: center;
-  margin: 5px;
+  // margin: 5px;
+
+  position: absolute;
 }
