--- a/src/components/CollapsibleHeader/collapsibleheader.scss
+++ b/src/components/CollapsibleHeader/collapsibleheader.scss
@@ -6,7 +6,7 @@
   padding: 5px;
   padding-left: 10px;
   background-color: #d8d8d8;
-  margin-bottom: 5px;
+  margin-top: 5px;
   text-transform: uppercase;
   color: $zorroa-gray;
   font-weight: 100;
