--- a/src/styles/core-mixins.scss
+++ b/src/styles/core-mixins.scss
@@ -35,7 +35,7 @@ $zorroa-warm-grey-60   : rgba(128, 128, 128, 0.6);
 
 $zorroa-darkgray   : #4a4a4a;
 $zorroa-gray       : #808080;
-$zorroa-lightgray  : #ccc;
+$zorroa-lightgray  : #c3c3c3;
 $zorroa-nearwhite  : #ededed;
 $zorroa-transparent: transparent;
 
