--- a/src/components/Workspace/workspace.scss
+++ b/src/components/Workspace/workspace.scss
@@ -49,7 +49,7 @@
   flex: 0 0 20px;
   max-height: 20px;
   padding: 8px;
-  border-top: 1px solid #c3c3c3;
+  border-top: 1px solid $zorroa-lightgray;
   margin-bottom: 4px;
 
   &.footer-open {
