Make thumbs not resize when selected [Finishes #132385339]

--- a/src/components/Thumb/Thumb.scss
+++ b/src/components/Thumb/Thumb.scss
@@ -3,6 +3,8 @@
 .assets-thumb {
   background-repeat: no-repeat;
   background-position: center;
+  background-clip: border-box;
+  background-origin: border-box;
   // margin: 5px;
 
   position: absolute;
