--- a/src/styles/core-globals.scss
+++ b/src/styles/core-globals.scss
@@ -30,8 +30,15 @@ html, body {
   margin:0;
 }
 
-* {
+// https://css-tricks.com/box-sizing/
+html {
   box-sizing: border-box;
+}
+*, *:before, *:after {
+  box-sizing: inherit;
+}
+
+* {
   font-family: 'Roboto', sans-serif;
 }
 
