Styling for sidebar closed state

--- a/src/components/CollapsibleHeader/collapsibleheader.scss
+++ b/src/components/CollapsibleHeader/collapsibleheader.scss
@@ -14,8 +14,11 @@
 
 .collapsibleheader-icon {
   color: $zorroa-gray;
-  margin-right: 14px;
   padding-bottom: 3px;
+
+  &.sidebarIsOpen {
+    margin-right: 14px;
+  }
 }
 
 .collapsibleheader-caret {
