--- a/src/components/Sidebar/sidebar.scss
+++ b/src/components/Sidebar/sidebar.scss
@@ -15,7 +15,7 @@
 
   overflow: hidden;
 
-  &.open {
+  &.isOpen {
     width: $zorroa-sidebar-width;
     max-width: $zorroa-sidebar-width;
     min-width: $zorroa-sidebar-width;
