--- a/src/components/DropdownMenu/dropdown-menu.scss
+++ b/src/components/DropdownMenu/dropdown-menu.scss
@@ -1,7 +1,10 @@
+@import '../../styles/core-mixins.scss';
+
 .dropdown-menu {
   box-sizing: border-box;
   display: inline-block;
   position:relative;
+  margin-left: 40px;
 
   button {
     -webkit-user-select: none;
@@ -15,14 +18,10 @@
     box-sizing: border-box;
     color: #444444;
     cursor: pointer;
-    font-size: 1rem;
-    line-height: 1.25;
-    padding: .5rem 1rem;
-    text-align: center;
-    vertical-align: middle;
+    font-size: 14px;
+    padding: 0;
     white-space: nowrap;
-    width: 100%;
-
+    text-transform: uppercase;
     &:focus {
       outline: none;
     }
@@ -35,13 +34,13 @@
     border: 1px solid #ccc;
     box-sizing: border-box;
     list-style-type: none;
-    margin: 0;
-    padding: 15px 18px;
+    margin: 16px 0 0;
+    padding: 15px 12px;
     position: absolute;
     text-align: left;
     top: 100%;
-    width: 100%;
     z-index: 1000;
+    box-shadow: 0 0 30px 0 $zorroa-gray;
   }
 
   li {
@@ -55,13 +54,8 @@
   }
 
   .dropdown-caret {
-    border-left: 4px solid transparent;
-    border-right: 4px solid transparent;
-    border-top: 4px solid;
-    display: inline-block;
-    height: 0;
-    margin-left: 2px;
-    vertical-align: middle;
-    width: 0;
+    font-size: 10px;
+    padding: 5px;
+    color: $zorroa-gray;
   }
 }
