To customize SimpleSearch, wrap it in a div with a custom class name

--- a/src/components/Racetrack/SimpleSearch.scss
+++ b/src/components/Racetrack/SimpleSearch.scss
@@ -1,6 +1,6 @@
 @import '../../styles/core-mixins.scss';
 
-.simple-search {
+.simple-search-box .collapsible {
   & .collapsible-header {
     display: flex;
     justify-content: space-between;
