--- a/src/components/Workspace/workspace.scss
+++ b/src/components/Workspace/workspace.scss
@@ -15,24 +15,16 @@
   left: 0;
 }
 
-// Asset region, between the sidebars, filling the width
-.workspace-asset-region {
-  flex: 1 0 0;
-  display: flex;
-  flex-direction: column;
-  padding: 8px;
-  background-color: $zorroa-nearwhite;
-}
-
 // Allow the workspace to fill the full height of App
 .workspace {
   background-color: $zorroa-nearwhite;
-}
 
-// Asset and table, in a column
-.workspace-body {
+  & .workspace-vertical-separator {
+    height: 100%;
+    width: 1px;
+    border-right: 1px solid $zorroa-lightgray;
+  }
 }
-
 
 // Footers use flex-basis to toggle between open and close
 .footer {
