--- a/src/styles/core-globals.scss
+++ b/src/styles/core-globals.scss
@@ -106,6 +106,7 @@ Make our color defs available as classes
 // .flexRowRev { @include flexRowRev; }
 .flexCol { @include flexCol; }
 .flexCenter { @include flexCenter; }
+.flexRowCenter { @include flexRowCenter; }
 .flexColCenter { @include flexColCenter; }
 .flexWrap { @include flexWrap; }
 
