--- a/src/components/Assets/pager.scss
+++ b/src/components/Assets/pager.scss
@@ -1,23 +1,9 @@
 @import '../../styles/core-mixins.scss';
 
-.asset-counter {
-  font-size: 14px;
-  color: #777;
-
-  .asset-counter-count {
-    font-weight: bold;
-    color: $zorroa-greyish-brown;
-  }
-}
-
 .pager {
   font-size: 14px;
   color: $zorroa-greyish-brown;
   background-color: #fff;
-  display: flex;
-  flex: 1;
-  justify-content: space-between;
-  align-items: center;
   border-radius: 3px;
   margin-top: 12px;
   margin-bottom: 8px;
@@ -51,13 +37,27 @@
     color: #777;
   }
 
+  .pager-showing-text {
+    &:after {
+      content: 'SHOWING ';
+      @media screen and (max-width: 1300px) { content: ''; }
+    }
+  }
+
+  .pager-sets-text {
+    &:after {
+      content: 'LOAD SETS OF';
+      @media screen and (max-width: 1300px) { content: 'LOAD'; }
+    }
+  }
+
   .pager-page-size {
-    display: flex;
-    align-items: center;
     margin-left: 4px;
     margin-right: 4px;
     color: #777;
     font-size: 12px;
+
+    @media screen and (max-width: 1300px) { display: none; }
 
     &.pager-page-size-selected {
       color: #71b623;
