Allow searchbar to shrink with window width

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -12,6 +12,11 @@
 .header-logo-search {
 }
 
+.header-searchbar {
+  width: 30%;
+  max-width: 350px;
+}
+
 // Adjust the logo size so search starts at expanded sidebar
 .header-logo {
   padding-top: 6px;
