--- a/src/components/Searchbar/Searchbar.scss
+++ b/src/components/Searchbar/Searchbar.scss
@@ -18,7 +18,9 @@
 .searchbar {
   background: transparent;
   border: none;
-  width: 347px;
+
+  width: 100%;
+
   border-bottom: 2px solid $zorroa-sickly-green;
   font-size: 16px; // TODO: see if we can delete this when bootstrap is gone
 }
