--- a/src/components/Racetrack/filter.scss
+++ b/src/components/Racetrack/filter.scss
@@ -8,6 +8,9 @@
   height: 40px;
   margin-right: 8px;
   margin-left: 8px;
+  min-width: 200px;
+  text-transform: uppercase;
+  font-size: 14px;
 
   button {
     border: none;
@@ -35,4 +38,22 @@
     padding-left: 8px;
     padding-right: 8px;
   }
+}
+
+.rotN90Flip {
+  transform: rotate(-90deg) scaleY(-1);
+}
+
+.filter-header-icon {
+  font-size: 30px;
+  margin-right: 8px;
+}
+
+.facet-icon {
+  width: 30px;
+  height: 30px;
+  border: none;
+  outline: none;
+  font-size: 16px;
+  border-radius: 3px;
 }
