--- a/src/components/CollapsibleHeader/collapsibleheader.scss
+++ b/src/components/CollapsibleHeader/collapsibleheader.scss
@@ -16,6 +16,10 @@
   color: $zorroa-gray;
   margin-right: 14px;
   padding-bottom: 3px;
+
+  &.isIconified {
+    margin-right: 0;
+  }
 }
 
 .collapsibleheader-caret {
