--- a/src/components/Racetrack/racetrack.scss
+++ b/src/components/Racetrack/racetrack.scss
@@ -152,3 +152,9 @@
 .racetrack-add-menu {
   width: 300px;
 }
+
+.racetrack-empty-icon-mag {
+  font-size: 30px;
+  color: $zorroa-gray;
+  padding: 5px 8px;
+}
