Agg buckets for facet.

--- a/src/components/Racetrack/filter.scss
+++ b/src/components/Racetrack/filter.scss
@@ -61,3 +61,16 @@
   font-size: 16px;
   border-radius: 3px;
 }
+
+.facet-min-value {
+  font-size: 13px;
+  color: $zorroa-lightgray;
+  margin-top: 22px;
+  margin-bottom: 14px;
+}
+
+.facet-footer {
+  border-top: 1px solid $zorroa-nearwhite;
+  padding-top: 4px;
+  padding-bottom: 4px;
+}
