Additional styling tweaks.

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -28,8 +28,12 @@
 }
 
 // Simple menu text for now
-.header-menu {
+.header-menu-bar {
   list-style: none;
+}
+
+.header-menu {
+  margin-left: 40px;
 }
 
 .header-menu-icon {
