--- a/src/components/Racetrack/Facet.scss
+++ b/src/components/Racetrack/Facet.scss
@@ -27,6 +27,14 @@
   margin-bottom: 14px;
 }
 
+.facet-value-range {
+  flex: 1;
+}
+
+.facet-controls {
+  color: $zorroa-gray;
+}
+
 .facet-footer {
   border-top: 1px solid $zorroa-nearwhite;
   padding-top: 4px;
