--- a/src/components/Lightbox/Lightbar.scss
+++ b/src/components/Lightbox/Lightbar.scss
@@ -6,16 +6,16 @@
   justify-content: space-between;
   display: flex;
   width: 100%;
+  height: 60px;
 
   .lightbar-attr {
     display: flex;
-    margin-top: 22px;
-    margin-bottom: 22px;
+    margin-left: 22px;
 
     .lightbar-attr-label {
       margin-right: 10px;
       font-size: 12px;
-      font-weight: 300;
+      font-weight: 100;
       text-align: right;
       color: $zorroa-nearwhite;
     }
@@ -27,7 +27,14 @@
   }
 
   .lightbar-settings {
-    margin: 22px 40px 22px 12px;
+    width: 40px;
+    height: 40px;
+    background-color: $zorroa-sickly-green;
+  }
+
+  .lightbar-btn-icon {
+    font-size: 20px;
+    margin-left: 10px;
   }
 
   button {
@@ -37,12 +44,12 @@
     border: none;
     background: none;
     outline: none;
-
+    text-transform: uppercase;
   }
 
   // Standin for whatever we should use here...
   button:hover {
-    color: #71b623;
+    color: $zorroa-sickly-green;
   }
 
   button:active {
