--- a/src/components/Lightbox/Lightbar.scss
+++ b/src/components/Lightbox/Lightbar.scss
@@ -1,6 +1,6 @@
 @import '../../styles/core-mixins.scss';
 
-.lightbar {
+.Lightbar {
   color: white;
   background-color: black;
   justify-content: space-between;
@@ -8,11 +8,11 @@
   width: 100%;
   height: 60px;
 
-  .lightbar-attr {
+  .Lightbar-attr {
     display: flex;
     margin-left: 22px;
 
-    .lightbar-attr-label {
+    .Lightbar-attr-label {
       margin-right: 10px;
       font-size: 12px;
       font-weight: 100;
@@ -20,35 +20,35 @@
       color: $zorroa-nearwhite;
     }
 
-    .lightbar-attr-value {
+    .Lightbar-attr-value {
       font-size: 14px;
       color: white;
     }
   }
 
-  .lightbar-settings {
+  .Lightbar-settings {
     width: 40px;
     height: 40px;
     background-color: $zorroa-sickly-green;
     &:hover { background-color: darken($zorroa-sickly-green, 15%); }
   }
 
-  .lightbar-btn-icon {
+  .Lightbar-btn-icon {
     font-size: 20px;
     margin-left: 10px;
   }
 
-  .lightbar-action {
+  .Lightbar-action {
     margin: 10px;
     &:hover  { color: $zorroa-sickly-green; }
     &:active { color: chartreuse; }
   }
-  .lightbar-action-text {
+  .Lightbar-action-text {
     text-transform: uppercase;
     @media screen and (max-width: 1000px) { display: none; }
   }
 
-  .lightbar-close {
+  .Lightbar-close {
     margin-right: 12px;
     margin-left: 32px;
     font-size: 20px;
