Add hover color to the Lightbar close button

--- a/src/components/Lightbox/Lightbar.scss
+++ b/src/components/Lightbox/Lightbar.scss
@@ -52,6 +52,7 @@
     margin-right: 12px;
     margin-left: 32px;
     font-size: 20px;
+    &:hover { color: $zorroa-sickly-green; }
   }
 
   button {
