Re-enable vertical centering of the sidebar arrows

--- a/src/components/Sidebar/sidebar.scss
+++ b/src/components/Sidebar/sidebar.scss
@@ -27,7 +27,7 @@
   padding-right: 10px;
 
   @include flexRow;
-  //@include flexAlignItemsCenter;
+  @include flexAlignItemsCenter;
 
   &.left {
     @include flexJustifyEnd;
